@@ -3,6 +3,9 @@ Version 0.8.0
     New behaviour: xml::document::save_to_{string,file}() now throws exception
     in case of failure by default instead of filently ignoring any errors.
 
+    Extend xpath_context::evaluate() to optionally throw an exception if an
+    invalid XPath expression is specified.
+
     Added xml::node::move_under().
     Added xml::node::set_namespace().
     Added xml::xpath_context class for evaluating XPath expressions.
